# atrium.kyleharrington.com

./: .gitignore  CNAME  README.md  index.html  mcp_server.py  pyproject.toml  sitemap.txt
.atrium/: site_config.py
.atrium/scripts/: generate_index.py
.github/workflows/: build-pages.yml
alife/evolving-swarm/: 0.0.1.py  0.0.2.py  0.0.3.py  0.0.4.py  index.html  index_0.0.1.html  index_0.0.2.html  index_0.0.3.html  index_0.0.4.html  index_main.html  main.py  source.html  source_0.0.2.html  source_0.0.3.html  source_main.html
alife/lambda-chemistry/: 0.0.1.py  index.html  index_0.0.1.html  source.html
alife/lambda-chemistry-reproducer-freq/: 0.0.1.py
alife/langtons-ant/: 0.0.2.py  index.html  index_0.0.2.html  source.html
atrium/update/: 0.0.1.py  index.html  index_0.0.1.html  source.html  source_0.0.1.html
bioinformatics/pdb-to-pns/: 0.0.1.py  index.html  index_0.0.1.html  source.html
communication/napari-conference/: 0.0.1.py  index.html  index_0.0.1.html  source.html  source_0.0.1.html
cryoet/copick-spliced-volume-renderer/: README.md  index.html  index_main.html  main.py  source.html
cryoet/copick-torch-inspector/: index.html  index_main.html  main.py  main.py.new  source.html
cryoet/kaggle-csv-to-copick/: index.html  index_main.html  main.py  source_main.html
cryoet/polnet/: 0.0.1.py  index.html  index_0.0.1.html  source.html
example/external-script/: 0.1.0.py  index.html  source.html
example/hello-world/: 0.1.0.py  index.html  source.html
experimental/: lambda_chemistry_wandb.py  sf_wandb.py
fractals/napari-mandelbrot/: 0.0.1.py  (+7 more)
(+93 files in other folders)
